# flipperzero-nfc-security-tool

./: CMakeLists.txt  Makefile  README.md  application.fam  nfc_security_tool.c  nfc_security_tool.h  nfc_security_tool_i.h  nfc_security_tool_scene_config.h
helpers/: mifare_classic_security.c  mifare_classic_security.h
nfc_security_tool/: compile_flags.txt
nfc_security_tool/scenes/: nfc_security_tool_scene.h  nfc_security_tool_scene_exit.c  nfc_security_tool_scene_read_error.c  nfc_security_tool_scene_read_success.c
scenes/: nfc_security_tool_scene.c  nfc_security_tool_scene_analyze.c  nfc_security_tool_scene_clone.c  nfc_security_tool_scene_emulate.c  nfc_security_tool_scene_read.c  nfc_security_tool_scene_start.c
